apps/hello-sourceless/tls/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello-sourceless-tls
  namespace: default
spec:
  hosts:
    - "hello-sourceless.default.example.com"
  gateways:
    - istio-system/hello-tls-gateway
  http:
    - match:
        - authority:
            prefix: hello-sourceless.default.example.com
      route:
        - destination:
            host: hello-sourceless-svc.default.svc.cluster.local
            port:
              number: 80
          weight: 100
